force-app/main/default/objects/VATACBalance__c/VATACBalance__c.object-meta.xml
<CustomObject>
    <label>VAT+A/C Bal</label>
    <nameField>
        <displayFormat>VIA-{000000}</displayFormat>
        <label>VAT+A/C BAL ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>VAT+A/C Bal</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>