force-app/main/default/objects/VATACBalance__c/fields/AmountOfBuyingVATFormula__c.field-meta.xml
<CustomField>
    <fullName>AmountOfBuyingVATFormula__c</fullName>
    <formula>VATInvoiceID__r.AmountOfTaxVATBuying__c</formula>
    <label>AMOUNT OF BUYING VAT-FORMULA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>