force-app/main/default/objects/VATACBalance__c/fields/AmountOfSellingVATFormula__c.field-meta.xml
<CustomField>
    <fullName>AmountOfSellingVATFormula__c</fullName>
    <formula>VATInvoiceID__r.AmountOfTaxVATSelling__c</formula>
    <label>AMOUNT OF SELLING VAT-FORMULA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>